# FastAPIBankingSystem

./: .gitignore  pyproject.toml
docs/diagrams/class_diagram/: class_diagram.puml
migrations/: env.py
migrations/versions/: 1082fa06f220_initial.py  fecd3d9a35d5_remove_relationships.py
src/: main.py
src/commands/: create_user.py
src/controllers/: auth.py  checking_account.py  individual_client.py  user.py
src/controllers/transactions/: __init__.py  deposit.py  withdrawal.py
src/core/: config.py
src/models/: __init__.py  account.py  base.py  client.py  transaction.py  user.py
src/schemas/: account.py  client.py  transaction.py  user.py
src/services/: checking_account.py  deposit.py  individual.py  individual_client.py  user.py  withdrawal.py
src/utils/: database.py  password.py  security.py
src/views/: account.py  client.py  transaction.py
