[project]
name = "fastapibanksystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
